Inserindo as outras imagens na galeria
Inserindo as outras tags de imagem no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
                 <a href="img/aperitivos.jpg" class="gallery-items">
                     <img src="img/aperitivos.jpg" alt="Aperitivos">
                 </a>
+                <a href="img/bebidas.jpg" class="gallery-items">
+                    <img src="img/bebidas.jpg" alt="Bebidas">
+                </a>
+                <a href="img/caldos.jpg" class="gallery-items">
+                    <img src="img/caldos.jpg" alt="Caldos">
+                </a>
+                <a href="img/lanche.jpg" class="gallery-items">
+                    <img src="img/lanche.jpg" alt="Lanches">
+                </a>
+                <a href="img/prato-principal.jpeg" class="gallery-items">
+                    <img src="img/prato-principal.jpeg" alt="Prato Principal">
+                </a>
+                <a href="img/sobremesas.jpg" class="gallery-items">
+                    <img src="img/sobremesas.jpg" alt="Sobremesas">
+                </a>
             </div>
         </main>
     </body>
